@@ -1,23 +1,23 @@
 package tn.hypercloud.config;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Configuration
+@RequiredArgsConstructor
 public class WebConfig implements WebMvcConfigurer {
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        String uploadDir = Path.of("uploads").toAbsolutePath().toUri().toString();
-
-        registry.addResourceHandler("/hypercloud/uploads/**")
-                .addResourceLocations(uploadDir);
-
-        // Optionnel (utile pour debug direct)
+        // Serve voice messages and other uploads
+        String uploadPath = Paths.get("uploads").toAbsolutePath().toUri().toString();
         registry.addResourceHandler("/uploads/**")
-                .addResourceLocations(uploadDir);
+                .addResourceLocations(uploadPath)
+                .setCachePeriod(3600); // Cache for 1 hour
     }
 }
